--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,12 @@
 			<artifactId>spring-security-config</artifactId>
 			<version>5.2.2.RELEASE</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.0.18.Final</version>
+        </dependency>
+    </dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
